# test_currency

./: README.md  pyproject.toml
config/: settings.py  urls.py
currency/: admin.py  models.py  urls.py  views.py
currency/management/commands/: fetch_rates.py
currency/migrations/: 0001_initial.py
